--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,16 @@
+body {
+	padding-top: 70px;
+	font-family: 'Josefin Sans', sans-serif;
+}
+#projects {
+	padding-top: 70px;
+}
+#about {
+	padding-top: 70px;
+}
+#contact {
+	padding-top: 70px;
+}
 img {
 	max-width: 500px;
 	max-height: 500px;
@@ -13,5 +26,10 @@ img {
 
 .navbar-brand {
 	font-size: 40px;
-
+}
+a {
+	text-decoration: none;
+}
+h1 {
+	text-align: center;
 }
